Added "keepalive_timeout" and "send_timeout."

--- a/commented/nginx.conf
+++ b/commented/nginx.conf
@@ -2,7 +2,9 @@
 user nginx nginx;
 
 # Number of NGINX workers. Usually it's set, at maximum, 1 worker per CPU core.
-worker_processes  1;
+# If the server has 2+ CPU cores but it still does not receive many requests, 
+# it's a good idea to keep the value to 1 so it will avoid creating idle processes.
+worker_processes  2;
 
 # NGINX's master process process id.
 pid /var/run/nginx.pid;
@@ -58,7 +60,12 @@ http {
   # Disables the Nagle algorithm.
   # It's useful for sending frequent small bursts of data in real time.
   tcp_nodelay  off;
-  
+  # Timeout during which a keep-alive client connection will stay open to serve 
+  # all the requested files from the server side.
+  keepalive_timeout  30s;
+  # If a client does not receive anything within the time set in this directive, a connection is closed. 
+  send_timeout 60s;
+
   ##
   # GZIP
   ##
