--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 user nginx nginx;
-worker_processes  1;
+worker_processes  2;
 pid /var/run/nginx.pid;
 
 events {
@@ -20,6 +20,8 @@ http {
   sendfile on;
   tcp_nopush on;
   tcp_nodelay  off;
+  keepalive_timeout  30;
+  send_timeout 60;
   
   gzip  on;
   gzip_http_version 1.0;
@@ -35,7 +37,7 @@ http {
   upstream thin {
      server   0.0.0.0:3000;
      server   0.0.0.0:3001;
-     server   0.0.0.0:3002 weight=2;
+     server   0.0.0.0:3002;
   }
   
   upstream puma {
@@ -68,9 +70,7 @@ http {
 
       if (!-f $request_filename) {
         proxy_pass http://thin;
-        # Uncomment or define another virtual horst (server directive)
-        # to serve and test the upstream w/ Unix sockets.
-        # proxy_pass http://puma; 
+        # Or you can choose an upstream using Unix sockets:
         # proxy_pass http://puma; 
         break;
       }
