--- a/commented/nginx.conf
+++ b/commented/nginx.conf
@@ -6,7 +6,7 @@ user nginx nginx;
 # it's a good idea to keep the value to 1 so it will avoid creating idle processes.
 worker_processes  2;
 
-# NGINX's master process process id.
+# NGINX's master process id.
 pid /var/run/nginx.pid;
 
 events {
@@ -26,8 +26,8 @@ http {
   # MIME-TYPE
   ##
 
-  # It can include other config files using the "include" directive.
-  # Here we are including the mime-types.
+  # You can include other config files using the "include" directive.
+  # Here we are including the mime-types, for example.
   include /etc/nginx/mime.types;
   # The "application/octet-stream" means that the response is a binary file.
   # If this directive is not defined then response will be set to "text/plain" by default.
@@ -96,7 +96,7 @@ http {
   # CLUSTERS
   ##
 
-  # The "upstream" is defining the Thin clusters that are serving a Rails app.
+  # Below the "upstream" is defining some Thin clusters that are serving a Rails app.
   # They will handle the requets proxied by NGINX.
   upstream thin {
      server   0.0.0.0:3000;
@@ -126,7 +126,7 @@ http {
     # You can point the domain(s) served by this virtual host.
     server_name www.myawesomesite.com myawesomesite.com ec2-xx-xxx-xx-xxx.us-west-2.compute.amazonaws.com;
 
-    # Vhost specific access log.
+    # VHost specific access log.
     access_log  /var/log/nginx.vhost.access.log  main;
 
     location / {
@@ -144,7 +144,7 @@ http {
         break; 
       }
 
-      # Checks for index.html then rewrite 
+      # Checks for index.html then rewrite
       # the URL to add "/index.html" to the end of it.
       if (-f $request_filename/index.html) {
         rewrite (.*) $1/index.html break;
